package models;

public class DisplayCluesClassic implements DisplayCluesStrategy {

}