package models;

public class DisplayCluesEasy implements DisplayCluesStrategy {

}