package models;

public class DisplayCluesFactory {

}