package models;

public class DisplayCluesNumeric implements DisplayCluesStrategy {

}