package models;

public interface DisplayCluesStrategy {

}