package models;

public enum GameMode {
    CLASSIC,
    EASY,
    NUMERIC
}