package models;

public interface MasterMindObserver {
}