package models;

public enum Clue {
    WELL_PLACED, // 3
    MISPLACED, // 1
    WRONG // 0
}